--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@giphy/js-fetch-api": "^4.8.1",
+    "@giphy/react-components": "^6.8.1",
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
