--- a/react-app/.ice/route-manifest.json
+++ b/react-app/.ice/route-manifest.json
@@ -1,5 +1,13 @@
 [
   {
+    "path": "Rechatter",
+    "id": "Rechatter",
+    "file": "Rechatter.jsx",
+    "componentName": "rechatter",
+    "layout": false,
+    "exports": []
+  },
+  {
     "path": "Chatter",
     "id": "Chatter",
     "file": "Chatter.jsx",
